<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.JoinRoomFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/hatter">

        <TextView
            android:id="@+id/createRoom"
            android:layout_width="326dp"
            android:layout_height="37dp"
            android:layout_marginTop="16dp"
            android:background="#40FFFFFF"
            android:gravity="center"
            android:text="Join Room"
            android:textColor="@color/feher"
            android:textColorHint="@color/feher"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.013" />

        <EditText
            android:id="@+id/roomID"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/roomID"
            android:inputType="textPersonName"
            android:textColor="@color/feher"
            android:textColorHint="@color/feher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createRoom"
            app:layout_constraintVertical_bias="0.004" />

        <EditText
            android:id="@+id/roomPassword"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="112dp"
            android:layout_marginRight="112dp"
            android:ems="10"
            android:hint="@string/roomPassword"
            android:inputType="textPersonName"
            android:textColor="@color/feher"
            android:textColorHint="@color/feher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roomID" />

        <Button
            android:id="@+id/buttonJoinRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="108dp"
            android:background="#83FF5722"
            android:text="@string/roomJoin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roomID" />

        <View
            android:id="@+id/split"
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:layout_marginTop="28dp"
            android:background="#070303"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonJoinRoom" />

        <TextView
            android:id="@+id/questionLabel"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:hint="@string/questionLabel"
            android:textColor="@color/feher"
            android:textColorHint="@color/feher"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/split" />

        <Button
            android:id="@+id/button2"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/two"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintHorizontal_bias="0.927"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/button3"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:text="@string/three"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.829"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.162" />

        <Button
            android:id="@+id/button4"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginStart="128dp"
            android:layout_marginLeft="128dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/four"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button5"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/five"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.153"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintVertical_bias="0.117" />

        <Button
            android:id="@+id/button1"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/one"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.857"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="237dp"
            android:layout_height="26dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="60dp"
            android:text="Pick a card"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionLabel"
            app:layout_constraintVertical_bias="0.058" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>